Refactoring as per Java 14